added fields to user model / updated api docs
